--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.58.0",
     "aws-cdk-lib": "2.16.0",
+    "cdk-dynamo-table-viewer": "^0.2.263",
     "constructs": "^10.0.0"
   }
 }
